Add page to review notes made

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -73,6 +73,7 @@
 							</div>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/favorites}">Meus favoritos</a>
+							<a class="dropdown-item" href="#" th:href="@{/users/annotations}">Minhas anotações</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar perfil</a>
 							<div class="dropdown-divider"></div>
