--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -74,6 +74,8 @@
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/favorites}">Meus favoritos</a>
 							<a class="dropdown-item" href="#" th:href="@{/users/annotations}">Minhas anotações</a>
+							<h6 class="dropdown-header">Contribuições</h6>
+							<a class="dropdown-item" href="#" th:href="@{/users/topics}">Meus tópicos</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar perfil</a>
 							<div class="dropdown-divider"></div>
