--- a/src/main/resources/templates/admin/topic-edit.html
+++ b/src/main/resources/templates/admin/topic-edit.html
@@ -40,13 +40,13 @@
 					</div>
 
 					<div class="mb-3">
-						<label class="form-label fw-bold" for="htmlContent">Conteúdo</label>
+						<label class="form-label fw-bold" for="bodyHtml">Conteúdo</label>
 
-						<div id="editor-container" th:utext="${topic.htmlContent}"></div>
+						<div id="editor-container" th:utext="${topic.bodyHtml}"></div>
 
-						<input type="hidden" th:field="*{htmlContent}">
+						<input type="hidden" th:field="*{bodyHtml}">
 
-						<span class="text-danger" th:if="${#fields.hasErrors('htmlContent')}" th:errors="*{htmlContent}">Conteúdo
+						<span class="text-danger" th:if="${#fields.hasErrors('bodyHtml')}" th:errors="*{bodyHtml}">Conteúdo
 							inválido</span>
 					</div>
 
@@ -170,7 +170,7 @@
 		});
 
 		$('form').submit(function(event) {
-			$('#htmlContent').val(editor.root.innerHTML);
+			$('#bodyHtml').val(editor.root.innerHTML);
 		});
 	</script>
 </body>
