--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -225,7 +225,7 @@
 
 		<h3>Conteúdo</h3>
 		<div id="contentCard" class="card my-3 shadow">
-			<div class="card-body" id="contentEditor" th:utext="${topic.htmlContent}"></div>
+			<div class="card-body" id="contentEditor" th:utext="${topic.bodyHtml}"></div>
 
 			<div class="d-flex justify-content-end p-3">
 				<button id="finishButton" class="btn btn-outline-success"
