--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -276,14 +276,28 @@
 												th:action="@{/disciplines/{id}/forum-topics(id=${discipline.id})}" th:object="${forumTopic}">
 												<div>
 													<div class="mb-3">
-														<label for="title" class="form-label">Título</label>
+														<label for="title">Título</label>
+														<small class="d-flex text-muted">Seja específico e imagine que você está fazendo esta pergunta para outra pessoa</small>
 														<input id="title" type="text" class="form-control" required th:field="*{title}">
 													</div>
 
 													<div class="mb-3">
-														<label for="forum-topic-body-editor" class="form-label">Descrição</label>
+														<label for="forum-topic-body-editor">Descrição</label>
+														<small class="d-flex text-muted">Inclua todas as informações que alguém precisaria para responder sua pergunta</small>
 														<div id="forum-topic-body-editor"></div>
 														<input type="hidden" id="bodyHtml" th:field="*{bodyHtml}" required></input>
+													</div>
+													
+													<div class="mb-3">
+														<label for="topics">Tópicos de Tag</label>
+														<small class="d-flex text-muted">Adicione o(s) tópico(s) que tem haver com sua pergunta</small>
+														<select class="form-select" multiple th:field="*{tags}"
+															th:classappend="${#fields.hasErrors('tags')}? 'is-invalid'" aria-describedby="topicsFeedback">
+															<option th:each="topic : ${topics}" th:value="${topic.id}" th:text="${topic.name}"></option>
+														</select> 
+					
+														<div id="topicsFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('tags')}"
+															th:errors="*{tags}">Mensagem de erro</div>
 													</div>
 												</div>
 											</form>
@@ -309,9 +323,15 @@
 									ago</time>
 							</div>
 							<div class="mb-1 truncate" th:utext="${topic.bodyHtml}">Some placeholder content in a paragraph.</div>
+							
+							<div class="d-flex justify-content-between align-items-center">
+								<div class="tags align-self-center">
+									<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
+								</div> 
 
-							<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
+								<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
 								Alves.</small>
+							</div>
 						</a>
 					</div>
 				</div>
